<resources>
    <string name="app_name">Note Me</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="rPassword">Re-type password</string>
    <string name="passwordTextHelper">It must contains at least 1 upper case, 1 lower case and a number</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="signUp">Sign Up</string>
    <string name="createAccount">Create account</string>
    <string name="signIn">Sign In</string>
    <string name="account">don\'t have account?</string>
    <string name="intro">Organizing your life has been easier</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="haveAccount"><u>Have account? Sign in</u></string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="note_deleted_message">Note has been deleted</string>
    <string name="share_title">Share note with</string>
    <string name="signUpLayout_intro">Welcome to Note Me</string>
    <string name="settings">Settings</string>
    <string name="add_new_list">Add new list</string>
    <string name="default_list">Default list</string>
    <string name="enter_list_name">Enter list name</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
</resources>
