<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="viewModel"
                type="com.apps.noteMe.sharedViewModels.SignSharedViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            tools:context=".ui.SignInFragment">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/tb_appName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:backgroundTint="@android:color/white"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:titleTextAppearance="@style/toolbar_title_style">

            <TextView
                    android:id="@+id/tb_tv_appName"
                    style="@style/toolbar_title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name" />

        </androidx.appcompat.widget.Toolbar>

        <TextView
                android:id="@+id/tv_intro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/signUpLayout_intro"
                android:textSize="36sp"
                app:layout_constraintEnd_toStartOf="@+id/gl_right"
                app:layout_constraintStart_toStartOf="@+id/gl_left"
                app:layout_constraintTop_toBottomOf="@+id/tb_appName" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                style="@style/textInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/til_password"
                app:layout_constraintEnd_toStartOf="@+id/gl_right"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/gl_left"
                app:layout_constraintTop_toBottomOf="@+id/tv_intro"
                app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/email"
                    android:text="@={viewModel.currentUser.email}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                style="@style/textInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_signIn"
                app:layout_constraintEnd_toStartOf="@+id/gl_right"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/gl_left"
                app:layout_constraintTop_toBottomOf="@+id/til_email">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/password"
                    android:text="@={viewModel.currentUser.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/btn_signIn"
                style="@style/signButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/sign_in_button_shape"
                android:text="@string/signIn"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/tv_signUp"
                app:layout_constraintEnd_toStartOf="@+id/gl_right"
                app:layout_constraintStart_toStartOf="@+id/gl_left"
                app:layout_constraintTop_toBottomOf="@+id/til_password" />

        <TextView
                android:id="@+id/tv_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/createAccount"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/gl_right"
                app:layout_constraintStart_toStartOf="@+id/gl_left" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>